--- a/angular-complete/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/angular-complete/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,36 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col-xl-12">
+        <img src="" alt="">
+    </div>
+</div>
+    
+<div class="row">
+    <div class="col-sm-12">
+        <h1>Recipe Name</h1>
+    </div>
+</div>
+    
+<div class="row">
+    <div class="col-sm-12">
+        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+            <div class="btn-group" role="group">
+                <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Manage
+                </button>
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                    <a class="dropdown-item" href="#">To Shopping List</a>
+                    <a class="dropdown-item" href="#">Edit Recipe</a>
+                    <a class="dropdown-item" href="#">Manage Recipe</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    
+<div class="row">
+    <div class="col-sm-12">Description</div>
+</div>
+    
+<div class="row">
+    <div class="col-sm-12">Ingredients</div>
+</div>
