--- a/angular-complete/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/angular-complete/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,16 +6,23 @@
 <hr>
 <div class="row">
     <div class="col-sm-12">
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                <div>
-                    <h4 class="list-group-item-heading">Recipe Name</h4>
-                    <p class="list-group-item-text">Recipe Description</p>
-                </div>
-                <span>
-                    <img src="" alt="" style="max-height:75px;"/>
-                </span>
-            </a>
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+        *ngFor="let recipe of recipes">
+        <div>
+            <h4 class="list-group-item-heading">
+            {{ recipe.name }}
+            </h4>
+            <p class="list-group-item-text">
+            {{ recipe.description }}
+            </p>
         </div>
+        <span>
+            <img [src]="recipe.imagePath"
+            alt="{{ recipe.name }}"
+            style="max-height: 75px;">
+        </span>
+        </a>
+    </div>
     </div>
 </div>
