--- a/angular-complete/src/app/shopping-list/shopping-list.component.html
+++ b/angular-complete/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,11 @@
 <div class="row">
-    <div class="col-xl-10">
-       <app-shopping-edit></app-shopping-edit>
+    <div class="col-sm-10">
+        <app-shopping-edit></app-shopping-edit>
         <hr>
-        <p>The list</p>
+        <ul class="list-group">
+            <a href="#" class="list-group-item list-group-item-action" *ngFor="let ingredient of ingredients">
+                {{ingredient.name}} ({{ingredient.amount}})
+            </a>
+        </ul>
     </div>
 </div>
